feat: runQuickTask returns LLM response and validate via dry-run
- Return quick-edit AI response without mutating files; preview panel applies edits
- Reuse dry-run + parse validation for quick-edit snippet validation (prevents bad edits)
- Add UI guards: handle missing selection on apply and cancel background symbol task on close
- Update tests to accommodate new method signatures and validation behavior